# AiChat

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
migrations/versions/: 5dbb51488906_initial_database_schema.py
src/: config.py  constants.py  database.py  database_operations.py  db.py  deps.py  main.py  models.py  schemas.py
src/routers/: chat.py  kb.py  kb_router.py
src/services/: chat_service.py  kb_service.py  llm_client.py
src/templates/: chat.html  history.html  sessions.html
src/utils/: cookies.py
tests/: test_chat.py  tests.py
