[tool.poetry]
name = "aichat"
version = "0.1.0"
description = ""
authors = ["sultan91 <sultan.yerumbayev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
