[tool.poetry]
name = "aichat"
version = "0.1.0"
description = ""
authors = ["sultan91 <sultan.yerumbayev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
alembic = "^1.17.2"
aiosqlite = "^0.21.0"
jinja2 = "^3.1.6"
numpy = "^2.3.5"
fastapi = "^0.123.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
